--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,29 @@
 /* Add CSS Styling */
+
+.class {
+
+    background-color: lightpink;
+    font-family: verdana, DejaVu Sans, sans-serif;
+}
+
+.second class {
+
+    background-color: lightpink;
+    font-family: verdana, DejaVu Sans, sans-serif;
+    font-size: 24px;
+}
+
+
+#one {
+
+    color: blue;
+    font-size: 24px;
+}
+
+
+#two {
+
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
