--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,16 @@
 /* Add CSS Styling */
+.read,
+.unread {
+  font-size: 28px;
+  font-family: Helvetica, 'Times New Roman', sans-serif;
+}
+
+
+.read {
+  background-color: black;
+  color: white;
+}
+
+.unread {
+  background-color: yellow
+}
