finished cascade fix exercise and added a class selector for div.text.child to increase specificity

--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -2,15 +2,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  font-size: 22px;
+  font-weight: 1000;
 }
 
 .small-para {
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 900;
 }
 
 .para {
@@ -23,7 +23,7 @@ body {
   font-weight: bold;
 } 
 
-.button {
+button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -35,8 +35,8 @@ body {
   font-size: 14px;
 }
 
-div.text {
+div.text.child {
   color: rgb(0, 0, 0);
   font-size: 22px;
-  font-weight: 100;
+  font-weight: 1000;
 }
